Fix input text field spacing issues...

--- a/scss/main.sass
+++ b/scss/main.sass
@@ -133,11 +133,14 @@ body
                                 border-radius: 5px
                                 border: 2px solid $text-color
                             #top_input
+                                width: 40%
                                 +media(1024px)
+                                    width: 45%
                                     font-size: 1.5vw
                                 +media(768px)
                                     font-size: 1.6vw
                                 +media(600px)
+                                    width: 30%
                                     font-size: 2.5vw
                             #top-input:focus
                                 -moz-box-shadow: 0px 3px 18px -4px rgba(0,0,0,0.75)
@@ -179,9 +182,9 @@ body
                     #head-promo
                         +text($text,$text-color,1vw,400)  
                         +media(600px)
-                                font-size: 2vw
-                                text-align: center
-                                padding-bottom: 4%
+                            font-size: 2vw
+                            text-align: center
+                            padding-bottom: 4%
     .mid-section
         +center(100%, 0 auto)
         margin-top: .5%
@@ -241,7 +244,7 @@ body
                     -moz-box-shadow: 0px 3px 18px -6px rgba(0,0,0,0.75)
                     box-shadow: 0px 3px 18px -6px rgba(0,0,0,0.75)
                     +media(600px)
-                       padding: 1.5% 4%  
+                        padding: 1.5% 4%  
                     &:hover
                         color: $action
                         border: .5px outset $action
@@ -261,7 +264,7 @@ body
                         +media(768px)
                             padding-top: 15%
                         +media(600px)
-                                padding-top: 0
+                            padding-top: 0
                         img
                             width: 90%
                             +media(600px)
@@ -391,8 +394,8 @@ body
                         padding-top: 20%
                         line-height: 1.5
                         +media(600px)
-                           padding-top: 10%
-                           font-size: 3vw 
+                            padding-top: 10%
+                            font-size: 3vw 
                     .title-sec
                         display: flex
                         flex-direction: row
@@ -403,8 +406,8 @@ body
                             text-transform: uppercase
                             padding: 14% 0 0 5%
                             +media(600px)
-                               font-size: 3vw 
-                               padding-top: 13%
+                                font-size: 3vw 
+                                padding-top: 13%
             .right 
                 width: 50%
                 margin-left: 0.25%
@@ -427,16 +430,16 @@ body
                             padding-top: 14% 
                             margin-right: 30%
                             +media(600px)
-                               font-size: 3vw 
-                               margin-right: 13%
+                                font-size: 3vw 
+                                margin-right: 13%
                     #info-C
                         +text($text,$text-color,1.5vw,400)
                         +center(60%, 0 auto)
                         padding-bottom: 15%
                         line-height: 1.5
                         +media(600px)
-                           padding-bottom: 8%
-                           font-size: 3vw 
+                            padding-bottom: 8%
+                            font-size: 3vw 
     footer
         text-align: center
         padding-top: 8%
@@ -468,6 +471,14 @@ body
                         font-size: 2vw
                     +media(600px)
                         font-size: 3.2vw
+                #btm-input
+                    width: 15%
+                    +media(1024px)
+                        width: 20% !important
+                    +media(768px)
+                        width: 25% !important
+                    +media(600px)
+                        width: 40% !important
                 #btm-input:focus
                     -moz-box-shadow: 0px 3px 18px -4px rgba(0,0,0,0.75)
                     box-shadow: 0px 3px 18px -4px rgba(0,0,0,0.75)
